Ajout classe I_MR_List pour délocaliser la gestion des moyennes vers cette classe

--- a/JTEKT Side Gear/JTEKT Side Gear.csproj
+++ b/JTEKT Side Gear/JTEKT Side Gear.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="I_MR_List.cs" />
     <Compile Include="I_MR_Point.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
