--- a/JTEKT Side Gear/JTEKT Side Gear.csproj
+++ b/JTEKT Side Gear/JTEKT Side Gear.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="I_MR_Chart.cs" />
     <Compile Include="I_MR_List.cs" />
     <Compile Include="I_MR_Point.cs" />
     <Compile Include="Main.cs">
@@ -57,6 +58,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlDataSet.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
